samples/_failures_safe/1761141349_5d2092_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc60b55e.c:151: error: expected ‘;’, ‘,’ or ‘)’ at end of input
